welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:21: error: not found: value sol
			sol = true
                        ^SlugSnail:25: error: not found: value sol
	return sol
               ^